# gbemulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
ports/arduino/gbemulator/: gbemulator.ino
src/: ST7789display.h  cpu.cpp  cpu.h  display.h  dummydisplay.h  instructiondecoder.cpp  instructiondecoder.h  joypad.cpp  joypad.h  main.cpp  odroid_display.h  oleddisplay.h  ppu.cpp  ppu.h  romloader.cpp  romloader.h  sdldisplay.cpp  sdldisplay.h  st7789display2.h  timer.cpp  timer.h  tracecomp.cpp  utils.h
tests/: test_cpu.cpp  test_instructiondecoder.cpp  test_ppu.cpp  test_romloader.cpp  test_timer.cpp
